# Jojoba

./: .gitmodules  CMakeLists.txt  README.MD
libjojoba/: CMakeLists.txt
libjojoba/core/src/: asset_manager.cpp  asset_manager.hpp  instance.cpp  jojoba.cpp  scene.cpp  scene.hpp  stringutils.cpp  stringutils.hpp
libjojoba/core/src/imgui/: imgui_vermilion.cpp  imgui_vermilion.hpp
libjojoba/core/src/material/: material.hpp  material_phong.cpp  material_phong.hpp
libjojoba/core/src/materials/: material.hpp  no_material.cpp  no_material.hpp
libjojoba/core/src/object/: mesh.hpp  object.hpp
libjojoba/include/jojoba/: instance.hpp  jojoba.hpp
sandbox/: CMakeLists.txt
sandbox/assets/: cube1.blend  cube1.blend1  cube1.mtl  cube2.mtl
sandbox/src/: main.cpp
